<resources>
    <string name="app_name">SecureFinance KZ</string>
    <string name="nav_dashboard">Басты</string>
    <string name="nav_transactions">Операциялар</string>
    <string name="nav_statistics">Статистика</string>
    <string name="nav_settings">Баптаулар</string>
    <string name="setup_title">Қауіпсіздік кодын орнату</string>
    <string name="setup_description">Деректеріңізді қорғау үшін 4–8 таңбалы PIN-код орнатыңыз</string>
    <string name="setup_enter_pin">PIN-код енгізіңіз</string>
    <string name="setup_confirm_pin">PIN-кодты растаңыз</string>
    <string name="setup_pin_mismatch">PIN-кодтар сәйкес келмейді. Қайталаңыз</string>
    <string name="setup_pin_too_short">PIN-код кем дегенде 4 таңбадан тұруы керек</string>
    <string name="setup_button">Орнату</string>
    <string name="setup_success">PIN-код сәтті орнатылды</string>
    <string name="auth_title">Кіру</string>
    <string name="auth_description">PIN-кодыңызды енгізіңіз</string>
    <string name="auth_enter_pin">PIN-код</string>
    <string name="auth_use_biometric">Биометрия пайдалану</string>
    <string name="auth_wrong_pin">Қате PIN-код</string>
    <string name="auth_attempts_left">%d әрекет қалды</string>
    <string name="auth_locked">Тым көп қате. %s кейін қайталаңыз</string>
    <string name="auth_locked_warning">Ескерту: тағы 10 қате кіру әрекетінен кейін қосымша толық қайта іске қосылады</string>
    <string name="auth_biometric_title">Биометриямен кіру</string>
    <string name="auth_biometric_subtitle">SecureFinance KZ-ге кіру үшін саусақ ізіңізді немесе бетіңізді пайдаланыңыз</string>
    <string name="auth_biometric_cancel">PIN-код пайдалану</string>
    <string name="dashboard_total_balance">Жалпы баланс</string>
    <string name="dashboard_income">Кіріс</string>
    <string name="dashboard_expense">Шығыс</string>
    <string name="dashboard_balance">Айырым</string>
    <string name="dashboard_recent_transactions">Соңғы операциялар</string>
    <string name="dashboard_expenses_by_category">Шығындар бойынша</string>
    <string name="dashboard_no_transactions">Транзакция жоқ</string>
    <string name="dashboard_current_month">Ағымдағы ай</string>
    <string name="transaction_add">Операция қосу</string>
    <string name="transaction_edit">Операцияны өңдеу</string>
    <string name="transaction_income">Кіріс</string>
    <string name="transaction_expense">Шығыс</string>
    <string name="transaction_amount">Сома</string>
    <string name="transaction_account">Шот</string>
    <string name="transaction_category">Категория</string>
    <string name="transaction_date">Күні</string>
    <string name="transaction_note">Ескерту</string>
    <string name="transaction_save">Сақтау</string>
    <string name="transaction_delete">Жою</string>
    <string name="transaction_delete_confirm">Бұл операцияны жоюды растайсыз ба?</string>
    <string name="transaction_empty">Транзакциялар жоқ</string>
    <string name="transaction_filter">Сүзгі</string>
    <string name="transaction_search_hint">Іздеу…</string>
    <string name="transaction_today">Бүгін</string>
    <string name="transaction_yesterday">Кеше</string>
    <string name="filter_period">Кезеңі</string>
    <string name="filter_today">Бүгін</string>
    <string name="filter_this_week">Осы апта</string>
    <string name="filter_this_month">Осы ай</string>
    <string name="filter_this_year">Осы жыл</string>
    <string name="filter_custom">Арнайы аралық</string>
    <string name="filter_all">Барлығы</string>
    <string name="filter_type">Түрі</string>
    <string name="filter_account">Шот</string>
    <string name="filter_category">Категория</string>
    <string name="filter_apply">Қолдану</string>
    <string name="filter_reset">Тазалау</string>
    <string name="accounts_title">Шоттар</string>
    <string name="account_add">Шот қосу</string>
    <string name="account_edit">Шотты өңдеу</string>
    <string name="account_name">Шот атауы</string>
    <string name="account_type">Шот түрі</string>
    <string name="account_type_cash">Қолма-қол</string>
    <string name="account_type_card">Карта</string>
    <string name="account_type_savings">Жинақ шоты</string>
    <string name="account_type_other">Басқа</string>
    <string name="account_initial_balance">Бастапқы баланс</string>
    <string name="account_currency">Валюта</string>
    <string name="account_color">Түс</string>
    <string name="account_delete">Шотты жою</string>
    <string name="account_delete_confirm">Бұл шотты және оған байланысты барлық операцияларды жоюды растайсыз ба?</string>
    <string name="account_empty">Шот жоқ. Жаңасын қосыңыз</string>
    <string name="account_total">Жалпы баланс</string>
    <string name="categories_title">Категориялар</string>
    <string name="category_add">Категория қосу</string>
    <string name="category_edit">Категорияны өңдеу</string>
    <string name="category_name">Категория атауы</string>
    <string name="category_type">Түрі</string>
    <string name="category_color">Түс</string>
    <string name="category_delete">Жою</string>
    <string name="category_delete_confirm">Бұл категорияны жойғанда, оған байланысты операциялардың категориясы жойылады. Жалғастырасыз ба?</string>
    <string name="category_income">Кіріс категориялары</string>
    <string name="category_expense">Шығыс категориялары</string>
    <string name="cat_food">Азық-түлік</string>
    <string name="cat_transport">Көлік</string>
    <string name="cat_housing">Тұрғын үй</string>
    <string name="cat_communication">Байланыс</string>
    <string name="cat_clothing">Киім</string>
    <string name="cat_health">Денсаулық</string>
    <string name="cat_entertainment">Ойын-сауық</string>
    <string name="cat_education">Білім</string>
    <string name="cat_restaurant">Мейрамхана/кафе</string>
    <string name="cat_gifts">Сыйлықтар</string>
    <string name="cat_taxes">Салықтар/төлемдер</string>
    <string name="cat_other_expense">Басқа шығыстар</string>
    <string name="cat_salary">Жалақы</string>
    <string name="cat_bonus">Сыйлық</string>
    <string name="cat_freelance">Қосымша жұмыс</string>
    <string name="cat_pension">Зейнетақы/жәрдемақы</string>
    <string name="cat_investment">Инвестиция</string>
    <string name="cat_debt_return">Қарыз қайтарылды</string>
    <string name="cat_other_income">Басқа кірістер</string>
    <string name="statistics_title">Статистика</string>
    <string name="statistics_income_vs_expense">Кіріс және шығыс</string>
    <string name="statistics_by_category">Категориялар бойынша</string>
    <string name="statistics_daily">Күнделікті динамика</string>
    <string name="statistics_top5">Топ-5 шығын</string>
    <string name="statistics_week">Апта</string>
    <string name="statistics_month">Ай</string>
    <string name="statistics_quarter">Тоқсан</string>
    <string name="statistics_year">Жыл</string>
    <string name="statistics_custom">Арнайы</string>
    <string name="statistics_no_data">Деректер жоқ</string>
    <string name="statistics_income_label">Кіріс</string>
    <string name="statistics_expense_label">Шығыс</string>
    <string name="settings_title">Баптаулар</string>
    <string name="settings_security">Қауіпсіздік</string>
    <string name="settings_change_pin">PIN-кодты өзгерту</string>
    <string name="settings_biometric">Биометриялық аутентификация</string>
    <string name="settings_biometric_enabled">Биометрия қосулы</string>
    <string name="settings_biometric_disabled">Биометрия өшірулі</string>
    <string name="settings_biometric_unavailable">Биометрия қол жетімсіз</string>
    <string name="settings_auto_lock">Автоқұлыптау</string>
    <string name="settings_auto_lock_30s">30 секунд</string>
    <string name="settings_auto_lock_1m">1 минут</string>
    <string name="settings_auto_lock_3m">3 минут</string>
    <string name="settings_auto_lock_5m">5 минут</string>
    <string name="settings_auto_lock_never">Ешқашан</string>
    <string name="settings_flag_secure">Скриншот қорғауы</string>
    <string name="settings_interface">Интерфейс</string>
    <string name="settings_language">Тіл</string>
    <string name="settings_language_kk">Қазақша</string>
    <string name="settings_language_ru">Орысша</string>
    <string name="settings_theme">Тақырып</string>
    <string name="settings_theme_light">Ашық</string>
    <string name="settings_theme_dark">Қараңғы</string>
    <string name="settings_theme_system">Жүйелік</string>
    <string name="settings_currency">Негізгі валюта</string>
    <string name="settings_data">Деректерді басқару</string>
    <string name="settings_backup">Резервтік көшірме жасау</string>
    <string name="settings_restore">Резервтік көшірмеден қалпына келтіру</string>
    <string name="settings_factory_reset">Барлық деректерді жою</string>
    <string name="settings_factory_reset_confirm">Барлық деректер, шоттар, категориялар және операциялар жойылады. Бұл амалды болдырмау мүмкін емес. Растайсыз ба?</string>
    <string name="settings_about">Ақпарат</string>
    <string name="settings_app_version">Нұсқа</string>
    <string name="settings_privacy_policy">Құпиялылық саясаты</string>
    <string name="settings_user_agreement">Пайдаланушы келісімі</string>
    <string name="settings_help">Нұсқаулық</string>
    <string name="change_pin_title">PIN-кодты өзгерту</string>
    <string name="change_pin_old">Ескі PIN-код</string>
    <string name="change_pin_new">Жаңа PIN-код</string>
    <string name="change_pin_confirm">Жаңа PIN-кодты растаңыз</string>
    <string name="change_pin_wrong_old">Ескі PIN-код қате</string>
    <string name="change_pin_success">PIN-код сәтті өзгертілді</string>
    <string name="backup_title">Деректер басқару</string>
    <string name="backup_export">Шифрланған экспорт (.sfkz)</string>
    <string name="backup_export_password">Экспорт құпиясөзі</string>
    <string name="backup_export_password_hint">Экспорт үшін құпиясөз орнатыңыз</string>
    <string name="backup_export_success">Резервтік көшірме сәтті жасалды</string>
    <string name="backup_import">Резервтік көшірмеден импорттау</string>
    <string name="backup_import_password">Резервтік көшірме құпиясөзі</string>
    <string name="backup_import_success">Деректер сәтті қалпына келтірілді</string>
    <string name="backup_import_error">Қате: Жарамсыз файл немесе құпиясөз</string>
    <string name="backup_csv_export">CSV экспорт (шифрланбаған)</string>
    <string name="backup_csv_warning">Ескерту: CSV файлы шифрланбайды. Деректеріңіз ашық мәтін түрінде сақталады.</string>
    <string name="backup_import_mode_replace">Ауыстыру</string>
    <string name="backup_import_mode_merge">Біріктіру</string>
    <string name="backup_import_mode_title">Импорт режимі</string>
    <string name="today">Бүгін</string>
    <string name="yesterday">Кеше</string>
    <string name="widget_locked">🔒 Ашыңыз</string>
    <string name="notif_channel_budget">Бюджет ескертулері</string>
    <string name="notif_channel_budget_desc">Ай бюджеті асып кеткен кезде ескертеді</string>
    <string name="notif_budget_title">Бюджет асты!</string>
    <string name="notif_budget_msg" formatted="false">Ай шығысы: %d ₸. Бюджет лимиті: %d ₸</string>
    <string name="settings_monthly_budget">Ай бюджеті (₸)</string>
    <string name="settings_budget_hint">0 = өшірулі</string>
    <string name="settings_exchange_rates">Айырбас курстары</string>
    <string name="settings_rate_hint">Курс (₸)</string>
    <string name="settings_rates_saved">Курстар сақталды</string>
    <string name="category_empty">Категория жоқ. Жаңасын қосыңыз</string>
    <string name="error_no_accounts">Алдымен шот қосыңыз</string>
    <string name="warning_negative_balance_title">Теріс баланс ескертуі</string>
    <string name="warning_negative_balance_msg">Шоттың ағымдағы балансы: %s. Сома одан асады — баланс теріс болады. Жалғастырасыз ба?</string>
    <string name="warning_proceed">Жалғастыру</string>
    <string name="ok">Жақсы</string>
</resources>